@@ -1,4 +1,6 @@
 User-visible changes in version 1.1.1  (2011-  -  ):
+* option exit_on_warning=0/1 was replaced with on_error=stop/exit; new option
+  on_error=nothing allows to ignore errors in script.
 * minor bug fixes
 
 User-visible changes in version 1.1.0  (2011-07-18):
